# telegram_bot

./: .gitignore  BACKUP_INSTRUCTIONS.md  Cargo.toml  Cargo.toml.shuttle  DEPLOYMENT.md  DIAGNOSTIKA.md  Dockerfile  FLY_DEPLOY_INSTRUCTIONS.md  FLY_IO_GUIDE.md  FREE_DEPLOYMENT.md  GITHUB_PUSH.md  HOW_TO_GET_TOKEN.md  KANAL_INSTRUKCIYA.md  Procfile  QUICKSTART.md  RAILWAY_DEPLOY.md  README.md  TOKEN_FIX.md  TOKEN_PERMISSIONS.md  TOKEN_PROBLEM.md  backup_to_github.sh  deploy_to_fly.sh  fly.toml  fly.toml.example  install_service.sh  push_to_github.sh  render.yaml  run_background.sh  run_bot.sh
src/: main.rs  main_backup.rs  main_render.rs  main_shuttle.rs
