[package]
name = "telegram_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# teloxide - це бібліотека для роботи з Telegram Bot API
# Вона дозволяє нам легко створювати ботів для Telegram
teloxide = "0.17"

# tokio - це бібліотека для асинхронного програмування
# Асинхронне програмування означає, що програма може виконувати
# кілька завдань одночасно, не чекаючи завершення одного перед початком іншого
# Це важливо для ботів, бо вони можуть отримувати багато повідомлень одночасно
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }